--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
-html, body{
+html{
 background-color: black;
 text-emphasis-color: white;
 }
-html, p{
+p{
     text-align: left;
+    color: red;
 }
