--- a/style.css
+++ b/style.css
@@ -1,12 +1,92 @@
-html{
-background-color: black;
-text-emphasis-color: white;
-}
 html, body{
     background-color: black;
-    background-image: image-set("download.jpeg")
+    
 }
-html, p{
+html, e1{
     text-align: left;
     color: red;
+    font-size: 24px;
+    font-family: Times New Roman;
 }
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 80px;
+    background-color: #333;
+    color: #fff;
+    padding: 0 20px;
+  }
+  
+  .menu-icon {
+    display: inline-block;
+    cursor: pointer;
+  }
+  
+  .icon {
+    display: block;
+    width: 30px;
+    height: 2px;
+    background-color: #fff;
+    border-radius: 2px;
+    position: relative;
+    transition: background-color 0.2s ease-out;
+  }
+  
+  .icon:before,
+  .icon:after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: #fff;
+    border-radius: 2px;
+    position: absolute;
+    transition: transform 0.2s ease-out;
+  }
+  
+  .icon:before {
+    top: -10px;
+  }
+  
+  .icon:after {
+    bottom: -10px;
+  }
+  
+  .menu {
+    display: none;
+    flex-direction: column;
+    background-color: #333;
+    padding: 20px;
+    position: absolute;
+    top: 80px;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+  
+  .menu li {
+    margin: 10px 0;
+  }
+  
+  .menu a {
+    color: #fff;
+    text-decoration: none;
+  }
+  
+  .show-menu .icon {
+    background-color: transparent;
+  }
+  
+  .show-menu .icon:before {
+    transform: translateY(10px) rotate(45deg);
+  }
+  
+  .show-menu .icon:after {
+    transform: translateY(-10px) rotate(-45deg);
+  }
+  
+  .show-menu .menu {
+    display: flex;
+  }
+  
