--- a/style.css
+++ b/style.css
@@ -13,85 +13,44 @@ html, h1{
     display: flex;
     position: center, absolute;
 }
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 80px;
-    background-color: #333;
-    color: #fff;
-    padding: 0 20px;
+/* Dropdown Button */
+.dropbtn {
+    background-color: #04AA6D;
+    color: white;
+    padding: 16px;
+    font-size: 16px;
+    border: none;
   }
   
-  .menu-icon {
-    display: inline-block;
-    cursor: pointer;
-  }
-  
-  .icon {
-    display: block;
-    width: 30px;
-    height: 2px;
-    background-color: #fff;
-    border-radius: 2px;
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
     position: relative;
-    transition: background-color 0.2s ease-out;
+    display: inline-block;
   }
   
-  .icon:before,
-  .icon:after {
-    content: "";
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: #fff;
-    border-radius: 2px;
-    position: absolute;
-    transition: transform 0.2s ease-out;
-  }
-  
-  .icon:before {
-    top: -10px;
-  }
-  
-  .icon:after {
-    bottom: -10px;
-  }
-  
-  .menu {
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
     display: none;
-    flex-direction: column;
-    background-color: #333;
-    padding: 20px;
     position: absolute;
-    top: 80px;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
   }
   
-  .menu li {
-    margin: 10px 0;
-  }
-  
-  .menu a {
-    color: #fff;
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
     text-decoration: none;
+    display: block;
   }
   
-  .show-menu .icon {
-    background-color: transparent;
-  }
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
   
-  .show-menu .icon:before {
-    transform: translateY(10px) rotate(45deg);
-  }
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
   
-  .show-menu .icon:after {
-    transform: translateY(-10px) rotate(-45deg);
-  }
-  
-  .show-menu .menu {
-    display: flex;
-  }
-  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #3e8e41;}
