--- a/style.css
+++ b/style.css
@@ -13,6 +13,11 @@ html, h1{
     display: flex;
     position: center, absolute;
 }
+html, nav{
+    font-family: Times New Roman;
+    font-size: 36px;
+    position: flex, right;
+}
 /* Dropdown Button */
 .dropbtn {
     background-color: #04AA6D;
