--- a/style.css
+++ b/style.css
@@ -22,21 +22,22 @@ html, nav{
 .dropbtn {
     background-color: #04AA6D;
     color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
+    padding: 48px;
+    font-size: 36px;
+    border: black;
+    
   }
   
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
-    position: relative;
+    position: right, relative;
     display: inline-block;
   }
   
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
-    position: absolute;
+    position: flex;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
