--- a/style.css
+++ b/style.css
@@ -1,49 +1,44 @@
 html, body{
     background-color: black;
-    
-}
-html, section{
-    text-align: left;
+  }
+  html, section{
+    text-align: flex;
     color: red;
     font-size: 24px;
     font-family: Times New Roman;
-}
-html, h1{
-    image-resolution: 360px*360px;
+  }
+  html, h1{
     display: flex;
-    position: center, absolute;
-}
-html, nav{
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  html, nav{
     font-family: Times New Roman;
     font-size: 36px;
-    position: flex, right;
-}
-/* Dropdown Button */
-.dropbtn {
+  }
+  /* Dropdown Button */
+  .dropbtn {
     background-color: #04AA6D;
     color: white;
     padding: 48px;
     font-size: 36px;
     border: black;
-    
   }
-  
   /* The container <div> - needed to position the dropdown content */
   .dropdown {
-    position: right, relative;
+    position: relative;
     display: inline-block;
   }
-  
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
-    position: flex;
+    position: absolute;
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
   }
-  
   /* Links inside the dropdown */
   .dropdown-content a {
     color: black;
@@ -51,12 +46,10 @@ html, nav{
     text-decoration: none;
     display: block;
   }
-  
   /* Change color of dropdown links on hover */
   .dropdown-content a:hover {background-color: #ddd;}
-  
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {display: block;}
-  
   /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  .dropdown:hover .drop
+  
