--- a/style3.css
+++ b/style3.css
@@ -7,6 +7,7 @@ html{
     padding: 10px; /* add some padding inside the box */
     margin-bottom: 20px; /* add some margin between boxes */
     background-color: #f5f5f5; /* add a background color */
+    box-sizing: content-box;
   }
   
   .content-box h2 {
