--- a/style.css
+++ b/style.css
@@ -1,12 +1,7 @@
 html, body{
     background-color: black;
   }
-  html, h1{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-  }
+ 
   html, section{
     
     text-align: left;
@@ -35,7 +30,7 @@ html, body{
   /* Dropdown Content (Hidden by Default) */
   .dropdown-content {
     display: none;
-    position: absolute;
+    
     background-color: #f1f1f1;
     min-width: 160px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -53,5 +48,5 @@ html, body{
   /* Show the dropdown menu on hover */
   .dropdown:hover .dropdown-content {display: block;}
   /* Change the background color of the dropdown button when the dropdown content is shown */
-  .dropdown:hover .dropbtn {background-color: #3e8e41;}
+  .dropdown:hover .dropbtn {background-color: white;}
   
