--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html, body{
-    background-color: black;
+    background-color: grey;
   }
  
   html, section{
@@ -13,7 +13,7 @@ html, body{
 	width: 100%;
 	height: 70px;
 	display: flex;
-    align-items: center; 
+    align-items: left; 
 	justify-content: space-around; 
     background: transparent;
 	position: fixed;
