--- a/style2.css
+++ b/style2.css
@@ -1,63 +1,64 @@
-html, body{
-    background-color: black;
-  }
- 
-  html, section{
-    
-    text-align: left;
-    justify-content: left;
-    align-items: left;
-  }
-  header{
-	margin: 0 auto;
-	width: 100%;
-	height: 70px;
+#projects{
+	margin-top:100px;
+    height: 100%;
 	display: flex;
-    align-items: center; 
-	justify-content: space-around; 
-    background: transparent;
-	position: fixed;
-	top: 0;
-	transition: 0.3s;
-	z-index: 5;
+	flex-direction: column;
+	align-items: center;
+    justify-content: center;
+	text-align:center;
+	color: var(--main-fonts-color);
 }
-.nav-show{
-	opacity: 0;
+#projects h3{
+    padding-top: 70px;
 }
-
-header:hover{
-	opacity: 1;
-	background: var(--main-header-background);
+#projects p{
+	font-family: var(--main-font-family);
+	font-size:1.2rem;
+	padding: 10px;
 }
 
-.logo img{
-	padding-top: 5px;
-	height: 50px;
-	cursor: pointer;
+.work{
+	display: flex; 
+	flex: 1;
+    flex-wrap: wrap;
+    justify-content:center;
+	align-items: center;
+	padding: 20px;
 }
 
-.nav-bar{
-	list-style:none;
-	position: relative;
-	display: inline-flex;
+.card{
+	display: flex;
+	flex-direction: column;
+	margin: 20px;
+	width: 200px;
+	height:250px;
+	border-radius:12px;
+    background:var(--main-decor-color);
 }
 
-a.nav-link{
-	margin: 2px;
-	padding: 5px 10px;
-	text-decoration: none;
+.card img{
+	width: 100%;
+	height:70%;
+	border-radius:10px 10px 0px 0px;
+}
+
+.card .work-content{
+	text-align: center;
+	padding: 10px 5px;
+	font-size: 1rem;
 	color: var(--main-fonts-color);
 	font-family: var(--main-font-family);
 	cursor: pointer;
-	text-transform: uppercase;
 }
 
-.active{
-	background: var(--main-decor-color);
+.card a{
+	text-decoration: none;
 }
 
-.nav-link:hover {
-	color: #000000;
-    background: var(--main-decor-color);
+.card .work-content:hover{
+    color:#202020;
 }
-  
+
+.card:hover{
+	box-shadow: 0 0 1.5rem gray;
+}
