--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-html{
+html, body{
   background-color: white;
 }
-section{
+html, p1{
   font-color: red;
   font-family: Times New Roman;
   font-size: 36px;
