--- a/style.css
+++ b/style.css
@@ -1,27 +1,49 @@
 html, body{
   background-color: white;
 }
-html, p1{
-  font-color: red;
+html, section{
+  color: red;
   font-family: Times New Roman;
-  font-size: 36px;
+  font-size: 24px;
 }
+body {
+	margin: 0;
+	padding: 0;
+	font-family: sans-serif;
+}
+
+header {
+	background-color:black;
+	color: black;
+	font-family: Times New Roman;
+	font-size: 18px;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 10px 20px;
+}
+
+.logo img {
+	width: 180px;
+}
+
 nav {
   float: right;
-  text-align: right;
 }
 
-.nav-bar {
-  margin-top: 0;
-  padding-top: 0;
-  list-style-type: none;
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
   display: inline-block;
-  margin-right: 50px;
 }
 
-.nav-link {
+nav ul li {
   display: inline-block;
-  padding: 10px;
+  margin: 0 10px;
+}
+
+nav ul li a {
+  color: white;
   text-decoration: none;
-  color: #333;
 }
